login/logout functionalities updates

--- a/weatherapp/templates/weatherapp/login.html
+++ b/weatherapp/templates/weatherapp/login.html
@@ -70,7 +70,8 @@
 
       
       <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Log In!</legend>
+        <h2>Login</h2>
+        <br>
         {{ form|crispy }}
       </fieldset>
       {% csrf_token %}
