added to weather.html, just need to finish function for feeling calculation

--- a/weatherapp/templates/weatherapp/weather.html
+++ b/weatherapp/templates/weatherapp/weather.html
@@ -85,7 +85,12 @@
                 </div>
             </div>
             
-
+            <div class="card weather-item mb-">
+              <h2 class="card-header">How it Feels</h2>
+              <div class="card-body">
+                  <p class="card-text">{{ feels_like }}</p>
+              </div>
+          </div>
         </div>
     </div>
 
