--- a/weatherapp/templates/weatherapp/profile.html
+++ b/weatherapp/templates/weatherapp/profile.html
@@ -1,8 +1,74 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    {% if title %}
+    <title>Weather App - {{title}}</title>
+    {% else %}
+    <title>Weather App</title>
+    {% endif %}
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="{% url 'weather' %}">Weather App</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <h2>Profile</h2>
-  <p>Username: {{ user.username }}</p>
-  <p>Email: {{ user.email }}</p>
 
-  <div class="container">
-    <h1>{{ user.username}}</h1>
-  </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="{% url 'weather' %}"
+                >Weather</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="navbar-nav">
+          {% if user.is_authenticated %}
+          <a class="nav-item nav-link" href="{% url 'profile' %}"
+            >My Profile</a
+          >
+          <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+          {% else %}
+          <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+          <a class="nav-item nav-link" href="{% url 'register' %}"
+            >Register</a
+          >
+          {% endif %}
+        </div>
+      </div>
+    </nav>
+    
+    {% load crispy_forms_tags %}
+
+
+  <div class="card weather-item mb-4">
+    <h3 class="card-header">User Information</h3>
+    <div class="card-body">
+        <p class="card-text"><b>Username: </b> {{ user.username }}</p>
+        <p class="card-text"><b>Email: </b>{{ user.email }}</p>
+    </div>
+</div>
+
+
