--- a/weatherapp/templates/weatherapp/weather.html
+++ b/weatherapp/templates/weatherapp/weather.html
@@ -60,6 +60,8 @@
       </div>
     </nav>
 
+
+
     <div class="container py-5">
         <h1 class="text-left mb-5">Weather in {{ city_weather.city }}</h1>
         <div class="weather-container">
@@ -82,6 +84,13 @@
                 <h4 class="card-header">Windspeed</h4>
                 <div class="card-body">
                     <p class="card-text">{{ city_weather.windspeed }} mph</p>
+                </div>
+            </div>
+
+            <div class="card weather-item mb-4">
+                <h4 class="card-header">City Data</h4>
+                <div class="card-body">
+                    <p class="card-text">{{ city_data.city }}</p>
                 </div>
             </div>
             
