added to weather.html, just need to finish function for feeling calc

--- a/weatherapp/templates/weatherapp/weather.html
+++ b/weatherapp/templates/weatherapp/weather.html
@@ -94,6 +94,12 @@
                 </div>
             </div>
             
+            <div class="card weather-item mb4-">
+              <h4 class="card-header">How it Feels</h4>
+              <div class="card-body">
+                  <p class="card-text">{{ feels_like }}</p>
+              </div>
+            </div>
 
         </div>
     </div>
