implemented hourly and daily call, through not sure if that is daily wanted, can always revert to prev

--- a/weatherapp/templates/weatherapp/weather.html
+++ b/weatherapp/templates/weatherapp/weather.html
@@ -69,21 +69,21 @@
             <div class="card weather-item mb-4">
                 <h4 class="card-header">Temperature</h4>
                 <div class="card-body">
-                    <p class="card-text">{{ city_weather.temperature }}°F</p>
+                    <p class="card-text">{{ city_weather.daily_temperature }}°F</p>
                 </div>
             </div>
 
             <div class="card weather-item mb-4">
                 <h4 class="card-header">Description</h4>
                 <div class="card-body">
-                    <p class="card-text">{{ city_weather.description }}</p>
+                    <p class="card-text">{{ city_weather.daily_description }}</p>
                 </div>
             </div>
 
             <div class="card weather-item mb-4">
                 <h4 class="card-header">Windspeed</h4>
                 <div class="card-body">
-                    <p class="card-text">{{ city_weather.windspeed }} mph</p>
+                    <p class="card-text">{{ city_weather.daily_windspeed }} mph</p>
                 </div>
             </div>
 
